--- a/SpeakaholicApp/ios/Podfile
+++ b/SpeakaholicApp/ios/Podfile
@@ -22,6 +22,12 @@ if linkage != nil
 end
 
 target 'SpeakaholicApp' do
+  permissions_path = '../node_modules/react-native-permissions/ios'
+
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
+  pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
+
   config = use_native_modules!
 
   # Flags change depending on the env values.
