--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -10,8 +10,33 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/predictions": "^5.0.10",
+    "@azure/core-asynciterator-polyfill": "^1.0.2",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/geolocation": "^3.0.4",
+    "@react-native-community/netinfo": "^9.3.7",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/drawer": "^6.5.6",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "amazon-cognito-identity-js": "^6.1.2",
+    "aws-amplify": "^5.0.8",
+    "aws-amplify-react-native": "^7.0.2",
     "react": "18.2.0",
-    "react-native": "0.71.1"
+    "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.20",
+    "react-native": "0.71.1",
+    "react-native-device-info": "^10.3.0",
+    "react-native-dropdown-picker": "^5.4.4",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-picker": "^4.10.3",
+    "react-native-keychain": "^8.1.1",
+    "react-native-maps": "^1.3.2",
+    "react-native-notifications": "^4.3.3",
+    "react-native-permissions": "^3.6.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
