--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,8 +1,17 @@
 {
-  "providers": [
-    "awscloudformation"
-  ],
   "projectName": "speakaholic",
   "version": "3.1",
-  "frontend": "ios"
+  "frontend": "javascript",
+  "javascript": {
+    "framework": "none",
+    "config": {
+      "SourceDir": "src",
+      "DistributionDir": "dist",
+      "BuildCommand": "npm run-script build",
+      "StartCommand": "npm run-script start"
+    }
+  },
+  "providers": [
+    "awscloudformation"
+  ]
 }
