--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/datastore": "^4.0.11",
     "@aws-amplify/predictions": "^5.0.10",
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
