--- a/SpeakaholicApp/ios/SpeakaholicApp/Info.plist
+++ b/SpeakaholicApp/ios/SpeakaholicApp/Info.plist
@@ -55,7 +55,7 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Allow $(PRODUCT_NAME) to access your photo library to allow you to upload photos of deals you've found.</string>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>LaunchScreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
