--- a/SpeakaholicApp/ios/SpeakaholicApp/Info.plist
+++ b/SpeakaholicApp/ios/SpeakaholicApp/Info.plist
@@ -54,6 +54,10 @@
 	<string>Allow $(PRODUCT_NAME) to access your camera to allow you to upload photos of deals you've found.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Allow $(PRODUCT_NAME) to access your photo library to allow you to upload photos of deals you've found.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
