--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/datastore": "^4.0.11",
     "@aws-amplify/predictions": "^5.0.10",
+    "@aws-amplify/pushnotification": "^5.0.12",
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/geolocation": "^3.0.4",
@@ -21,7 +22,7 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "amazon-cognito-identity-js": "^6.1.2",
-    "aws-amplify": "^5.0.8",
+    "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
