--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/geolocation": "^3.0.4",
     "@react-native-community/netinfo": "^9.3.7",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "^6.1.1",
