--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -42,7 +42,8 @@
     "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
