--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -31,6 +31,7 @@
     "react-native-device-info": "^10.3.0",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-fs": "^2.20.0",
+    "react-native-glassfy-module": "^1.3.6",
     "react-native-image-picker": "^4.10.3",
     "react-native-keychain": "^8.1.1",
     "react-native-maps": "^1.3.2",
