--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -33,6 +33,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-glassfy-module": "^1.3.6",
     "react-native-image-picker": "^4.10.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.1.1",
     "react-native-maps": "^1.3.2",
     "react-native-notifications": "^4.3.3",
