--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SpeakaholicApp",
-  "version": "0.0.25",
+  "version": "0.0.39",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -31,13 +31,13 @@
     "react-native-device-info": "^10.3.0",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-fs": "^2.20.0",
-    "react-native-glassfy-module": "^1.3.6",
     "react-native-image-picker": "^4.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.1.1",
     "react-native-maps": "^1.3.2",
     "react-native-notifications": "^4.3.3",
     "react-native-permissions": "^3.6.1",
+    "react-native-purchases": "^5.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-sound": "^0.11.2",
