Added analytics logging

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+.terraform
+.terraform.lock*
 
+amplify/
+amplify-backup/
+.env*
 
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
@@ -11,6 +16,7 @@ amplify/backend/.temp
 build/
 dist/
 node_modules/
+aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
 amplifyconfiguration.dart
@@ -19,10 +25,4 @@ amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
 **.sample
-python/
 #amplify-do-not-edit-end
-
-.terraform
-.terraform.lock*
-
-amplify/
