--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/predictions": "^5.0.10",
     "@aws-amplify/pushnotification": "^5.0.12",
+    "@aws-sdk/client-appconfig": "^3.278.0",
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/geolocation": "^3.0.4",
@@ -31,6 +32,7 @@
     "react-native-device-info": "^10.3.0",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-fs": "^2.20.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-image-picker": "^4.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.1.1",
@@ -60,6 +62,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.7",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
