--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@sentry/react-native": "^5.0.0",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
