--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.20",
     "react-native": "0.71.1",
+    "react-native-config": "^1.5.0",
     "react-native-device-info": "^10.3.0",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-fs": "^2.20.0",
