--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -25,6 +25,7 @@
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
+    "flagsmith": "^3.16.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.20",
@@ -32,6 +33,7 @@
     "react-native-config": "^1.5.0",
     "react-native-device-info": "^10.3.0",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-flagsmith": "^3.16.0",
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-image-picker": "^4.10.3",
