--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -10,8 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@aws-amplify/predictions": "^5.0.10",
-    "@aws-amplify/pushnotification": "^5.0.12",
+    "@aws-amplify/predictions": "^5.0.16",
+    "@aws-amplify/pushnotification": "^5.0.16",
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/geolocation": "^3.0.4",
@@ -23,9 +23,9 @@
     "@react-navigation/native-stack": "^6.9.7",
     "@sentry/react-native": "^5.0.0",
     "amazon-cognito-identity-js": "^6.1.2",
-    "aws-amplify": "^5.0.12",
+    "aws-amplify": "^5.0.16",
     "aws-amplify-react-native": "^7.0.2",
-    "flagsmith": "^3.16.0",
+    "core-js": "^3.29.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.20",
@@ -48,6 +48,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
+    "reconnecting-eventsource": "^1.6.2",
     "redux": "^4.2.1",
     "rn-fetch-blob": "^0.12.0"
   },
