--- a/SpeakaholicApp/package.json
+++ b/SpeakaholicApp/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.71.1",
     "react-native-config": "^1.5.0",
     "react-native-device-info": "^10.3.0",
+    "react-native-document-picker": "^8.1.3",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-flagsmith": "^3.16.0",
     "react-native-fs": "^2.20.0",
